Replace: sun.misc.BASE64Decoder -> java.util.Base64